rename payment service

--- a/software-design/payment-service/pom.xml
+++ b/software-design/payment-service/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<groupId>com.wikicode96</groupId>
-	<artifactId>payment</artifactId>
+	<artifactId>payment-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>payment</name>
 
